--- a/app.yaml
+++ b/app.yaml
@@ -3,5 +3,11 @@ threadsafe: yes
 api_version: 1
 
 handlers:
+- url: /static
+  static_dir: static/
 - url: .*
   script: login.app
+
+libraries:
+- name: jinja2
+  version: latest
